service-users-ui/k8s/manifest-files/base/deployment.yaml
# GENERATED FROM: templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-users-ui
spec:
  selector:
    matchLabels:
      app: service-users-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: service-users-ui
    spec:
      containers:
      - name: service-users-ui
        image: localhost:5000/service-users-ui:12
        ports:
        - containerPort: 8080
