service-users-ui/k8s/manifest-files/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-users-ui
spec:
  selector:
    app: service-users-ui
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8090
      targetPort: 8080
